# dpc-messenger

./: .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLA.md  CLAUDE.md  COMPUTE_DISCLAIMER.md  CONTRIBUTING.md  KNOWLEDGE_DETECTION_TESTING.md  LEGAL_COMPLIANCE_SUMMARY.md  LEGAL_DISCLAIMER.md  LICENSE  LICENSE.md  NOTICE  PHASE3_MANUAL_CHECKLIST.md  PRODUCT_VISION.md  QUICK_START.md  README.md  ROADMAP.md  TERMS_OF_SERVICE.md  VISION.md  check_webrtc_support.sh  dpc_project_context.json  install_webkit_deps_ubuntu.sh  protocol-13-public.md
dpc-client/core/: README.md  SERVER_CONFIGURATION.md  TURN_SETUP.md  analyze_corpus.py  cc_agent_bridge.py  cc_cron_prompt.md  cc_cron_prompt_public.md  cc_group_chat_bridge.py  pyproject.toml  run_service.py  setup_gpu_support.py  test_turn.py
dpc-client/core/dpc_client_core/: __version__.py  agent_service.py  archive_migration.py  backup_manager.py  cli_backup.py  connection_status.py  consensus_manager.py  context_cache.py  context_coordinator.py  context_retriever.py  conversation_monitor.py  device_context_collector.py  dht_distance.py  dht_manager.py  dht_routing.py  dht_rpc.py  discord_service.py  effectiveness_tracker.py  file_server.py  firewall.py  hub_client.py  inference_orchestrator.py  knowledge_service.py  llm_manager.py  local_api.py  message_router.py  p2p_coordinator.py  p2p_manager.py  peer_cache.py  service.py  session_manager.py  settings.py  single_instance.py  skill_coordinator.py  stun_discovery.py  telegram_service.py  token_cache.py  voice_service.py  web_auth.py  webrtc_peer.py
dpc-client/core/dpc_client_core/connection_strategies/: __init__.py  base.py  gossip_store_forward.py  hub_webrtc.py  ipv4_direct.py  ipv6_direct.py  udp_hole_punch.py  volunteer_relay.py
dpc-client/core/dpc_client_core/coordinators/: __init__.py  connection_orchestrator.py  discord_coordinator.py  telegram_coordinator.py
dpc-client/core/dpc_client_core/dht/: __init__.py  distance.py  manager.py  routing.py  rpc.py
dpc-client/core/dpc_client_core/dpc_agent/: __init__.py  active_recall.py  agent.py  bm25_index.py  budget.py  c3_gate.py  chunking.py  consciousness.py  consolidation.py  context.py  decision_proposals.py  events.py  evolution.py  extended_paths_index.py  extraction_triggers.py  faiss_index.py  guards.py  hooks.py  hybrid_search.py  indexing_pipeline.py  knowledge_graph.py  llm_adapter.py  loop.py  memory.py  memory_config.py  memory_observer.py  model_download.py  model_swap.py  pricing.py  skill_reflection.py  skill_schema.py  skill_store.py  sleep_pipeline.py  task_queue.py  task_types.py  text_extract.py  utils.py
dpc-client/core/dpc_client_core/managers/: __init__.py  _telegram_logging.py  agent_manager.py  agent_telegram_bridge.py  discord_manager.py  file_transfer_manager.py  gossip_manager.py  group_manager.py  hole_punch_manager.py  instruction_manager.py  prompt_manager.py  relay_manager.py  telegram_manager.py  token_count_manager.py
dpc-client/core/dpc_client_core/message_handlers/: __init__.py  chat_history_handlers.py  context_handler.py  file_accept_handler.py  file_cancel_handler.py  file_chunk_handler.py  file_chunk_retry_handler.py  file_complete_handler.py  file_offer_handler.py  gossip_handler.py  group_handler.py  hello_handler.py  image_handler.py  inference_handler.py  knowledge_handler.py  provider_handler.py  relay_disconnect_handler.py  relay_message_handler.py  relay_register_handler.py  relay_response_handler.py  session_handler.py  skill_handler.py  telegram_handler.py  text_handler.py  transcription_handler.py  voice_transcription_handler.py
dpc-client/core/dpc_client_core/models/: __init__.py  gossip_message.py  peer_endpoint.py  relay_node.py  vector_clock.py
dpc-client/core/dpc_client_core/providers/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  dpc_agent_provider.py  gemini_provider.py  gigachat_provider.py  github_models_provider.py  ollama_provider.py  openai_provider.py  remote_peer_provider.py  whisper_provider.py  zai_coding_provider.py  zai_provider.py
dpc-client/core/dpc_client_core/transports/: __init__.py  dtls_connection.py  gossip_connection.py  relayed_connection.py  udp_peer_connection.py
dpc-client/core/templates/: wizard_template.json
dpc-client/core/tests/: conftest.py  test_active_recall.py  test_adr031_role_derivation.py  test_auth_browser.py  test_bm25_index.py  test_browser_tools.py  test_c3_gate.py  test_characterization_voice.py  test_chunking.py  test_comfyui_submit.py  test_consciousness_tools.py  test_conversation_monitoring.py  test_cross_cutting.py  test_decision_proposals.py  test_deepseek_provider.py  test_device_context_collector.py  test_dht_manager.py  test_dht_routing.py  test_dht_rpc.py  test_dtls_connection.py  test_evolution_verification.py  test_extended_paths_index.py  test_extracted_services.py  test_extraction_triggers.py  test_faiss_index.py  test_file_meta.py  test_firewall.py  test_firewall_web_auth.py  test_glm5_context_windows.py  test_gossip_connection.py  test_gossip_dht_certificates.py  test_gossip_encryption.py  test_grafeo_backend_parity.py  test_group_manager.py  test_group_session_state.py  test_group_voice_local_first.py  test_history_message_id.py  test_hooks_guards.py  test_hybrid_search.py  test_indexing_pipeline.py  (+25 more)
dpc-client/core/tests/dht/: __init__.py  (+3 more)
dpc-client/ui/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
dpc-hub/: .env.example  README.md  VERSION  alembic.ini  docker-compose.yml  geo_blocking_middleware.py  pyproject.toml  test_provider_update.py
dpc-hub/dpc_hub/: __version__.py  auth.py  connection_manager.py  crud.py  crypto_validation.py  database.py  main.py  models.py  schemas.py  settings.py  token_blacklist.py
dpc-hub/dpc_hub/alembic/: env.py
dpc-hub/tests/: test_comprehensive.py
dpc-protocol/: README.md  migrate_pcm.py  pyproject.toml
dpc-protocol/dpc_protocol/: commit_integrity.py  crypto.py  knowledge_commit.py  markdown_manager.py  pcm_core.py  protocol.py  utils.py
dpc-protocol/tests/: __init__.py  test_commit_integrity.py  test_pcm_compatibility.py
(+236 files in other folders)
