[project]
name = "dpc-hub"
version = "0.1.0"
description = ""
authors = [
    {name = "Mike Shevchenko",email = "mikhashev@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.121.0,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "dpc-protocol @ file:///C:/Users/mike/Documents/dpc-messenger/dpc-protocol"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
dpc-protocol = {develop = true}
