[project]
name = "dpc-protocol"
version = "0.1.0"
description = ""
authors = [
    {name = "Mike Shevchenko",email = "mikhashev@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography (>=46.0.3,<47.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
