[project]
name = "dpc-protocol"
version = "0.2.0"
description = ""
authors = [
    {name = "Mike Shevchenko",email = "legoogmiha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3,<47.0.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
