[project]
name = "dpc-client-core"
version = "0.23.0"
description = ""
authors = [{name = "Mike Shevchenko", email = "legoogmiha@gmail.com"}]
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.12,<4"
dependencies = [
    "ollama>=0.6.0,<0.7.0",
    "websockets>=11.0",
    "toml>=0.10.2,<0.11.0",
    "openai>=1.0.0,<2.0.0",
    "anthropic>=0.45.0",
    "tiktoken>=0.5.1,<0.6.0",
    "httpx>=0.27.0,<0.28.0",
    "aiortc>=1.6.0,<2.0.0",
    "certifi>=2024.0.0",
    "psutil>=5.9.0,<6.0.0",
    "Pillow>=10.0.0,<11.0.0",
    "transformers>=4.44.0,<5.0.0",
    "sentencepiece>=0.2.0,<0.3.0",
    "torch>=2.4.0,<3.0.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "torchvision>=0.19.0,<1.0.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "accelerate>=0.34.0,<1.0.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "librosa>=0.10.0,<1.0.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "soundfile>=0.12.0,<1.0.0",
    "sentence-transformers>=5.4.1; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "faiss-cpu>=1.8; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "python-telegram-bot>=21.0,<22.0",
    "google-genai>=1.0.0",
    "gigachat>=0.2.0",
    "dpc-protocol",
    "bm25s>=0.3.3",
    "ddgs>=9.14",
    "trafilatura>=1.12,<3.0",
    "stopwordsiso>=0.6",
]

[project.optional-dependencies]
dev = ["fastapi"]
mlx = [
    "mlx>=0.4.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-whisper>=0.2.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
browser = [
    "camoufox>=0.4.11",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9.0.0",
    "pytest-asyncio>=0.23.0,<0.24.0",
    "pytest-cov>=7.0.0",
]

[tool.uv.sources]
dpc-protocol = { path = "../../dpc-protocol", editable = true }
torch = { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" }
torchvision = { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
