[package]
name = "dpc-messenger"
version = "0.25.0"
description = "Privacy-first peer-to-peer messaging with collaborative AI intelligence"
authors = ["Mike Shevchenko <legoogmiha@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dpc_messenger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio recording for voice messages (Linux workaround for getUserMedia)
cpal = "0.15"
wav = "1.0"                # WAV file format (simple, no complex codecs)
byteorder = "1.4"          # Little-endian byte order for WAV files

# Async sleep for the T10 popup DOM-readiness probe loop (S145).
# Tauri 2 already uses tokio internally — we just need direct access
# to `tokio::time::sleep` for the bounded retry pattern in
# `web_auth.rs::extract_html_via_webview2`. Time feature only; we do
# not need rt/macros (Tauri owns the runtime).
tokio = { version = "1", features = ["time"] }

# T10 popup HTML extraction on Windows (S145, ADR-028).
# Tauri's `WebviewWindow::eval()` is fire-and-forget — it cannot read a JS
# expression's return value, and `window.__TAURI__.event.emit()` from popup
# JS is not available on external URLs (Tauri 2 security default), so the
# previous extract-via-JS-emit path silently dies on example.org / example.com.
# `webview2-com` lets us call WebView2's native `ExecuteScript` (which DOES
# return a Promise<string>) directly, bypassing the broken JS bridge.
# Pinned to the same version Tauri 2 already pulls in (Cargo.lock).
[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
# HSTRING for ExecuteScript call. Same major as webview2-com 0.38's
# transitive pin (Cargo.lock: windows 0.61.3).
windows = { version = "0.61", features = [] }

